tests/ui/explain/invalid-error-code.rs
//@ compile-flags: --explain error_code
//~? ERROR: error_code is not a valid error code
